--- a/css/styles.css
+++ b/css/styles.css
@@ -87,13 +87,16 @@ body {
 		width:1px;
 		background:#cbd2d4;
 	}
-	.base {
+	.base,
+	.aside {
 		height:auto;
 		overflow:hidden;
 		overflow-y:auto;
+		height:-webkit-calc(100vh - 90px);
 	}
 	.aside {
 		margin-top:0;
+		overflow:unset;
 	  display: -ms-flexbox;
 	  display: -webkit-flex;
 	  display: flex;
@@ -103,9 +106,6 @@ body {
 	  -webkit-flex-wrap: nowrap;
 	  		-ms-flex-wrap: nowrap;
 	  				flex-wrap: nowrap;
-	  -webkit-justify-content: center;
-	  					-ms-flex-pack: center;
-	  				justify-content: center;
 	  -webkit-align-content: stretch;
 	  	 -ms-flex-line-pack: stretch;
 	  	 			align-content: stretch;
@@ -127,14 +127,18 @@ body {
 	 		 			flex: 0 1 376px;
 	}
 	.aside-item:nth-child(2) {
-	  -webkit-flex: 0 1 auto;
-	  		-ms-flex: 0 1 auto;
-	  				flex: 0 1 auto;
+	  -webkit-flex: 1 1;
+	  		-ms-flex: 1 1;
+	  				flex: 1 1;
 	}
 }
 @media all and (min-width: 992px) {
 	.main {
 		padding-top: 56px;
+	}
+	.base,
+	.aside {
+		height:-webkit-calc(100vh - 56px);
 	}
 }
 
