--- a/bootstrap4/css/styles.css
+++ b/bootstrap4/css/styles.css
@@ -427,13 +427,15 @@ body {
 	align-items:stretch;
 }
 .popup-img {
+	-webkit-flex: 1 0 100%;
+          flex: 1 0 100%;
 	padding-right:1px;
 	height:100%;
 	position:relative;
 	text-align:center;
 }
 .popup-img img {
-	max-width:100%;
+	width:100%;
 	height:100%;
 }
 .popup-imgs-items {
@@ -443,13 +445,10 @@ body {
   display: -webkit-flex;
   display: flex;
   flex-wrap: nowrap;
+  align-items:flex-end;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-}
-.popup-imgs-items .popup-img {
-	-webkit-flex: 0 0 auto;
-					flex: 0 0 auto; 
 }
 .popup-img-caption {
 	background:rgba(0,0,0,1);
