--- a/bootstrap3/css/aside-nav.css
+++ b/bootstrap3/css/aside-nav.css
@@ -120,11 +120,33 @@
             color:#000000;
         }
         
-@media all and (min-width: 1200px) {
+@media all and (min-width: 1200px) { 
     .aside-nav {
-        margin-top:-0.6rem;
-        position:static;
         transform:none;
+        -webkit-transition: none;
+                transition: none;
+    }   
+    
+    .aside-nav.affix,
+    .aside-nav.affix-bottom {
+        position:fixed;
+        left:50%;
+        top:0;
+        width:17.5rem;
+        margin-left:-580px;
+    }
+    
+    .aside-nav.affix-bottom {
+        position:absolute;
+        left:5px;
+        margin:0;
+    }
+    
+    .aside-nav.affix-top {
+        position:relative;
+        left:0;
+        top:0;
+        margin-top:-2.25rem;
     }
 
         .aside-nav__close,
@@ -133,9 +155,7 @@
         }
 
         .aside-nav__list {
-            padding:0;
-            background:none;
+            padding-left:0;
             border:0;
-            width:auto
         }
 }
