--- a/bootstrap3/css/category-info.css
+++ b/bootstrap3/css/category-info.css
@@ -1,11 +1,19 @@
 .category-info {
-    margin-left:5rem;
+    margin-left:3rem;
+    margin-right:3rem;
     margin-bottom:1.25rem;
 }
 
     .category-info__title {
         margin-top:0;
     }
+    
+@media all and (min-width: 1200px) {
+    .category-info {
+        margin-left:5rem;
+        margin-right:5rem;
+    }
+}
     
 @media all and (min-width: 1200px) {
     .category-info {
