--- a/bootstrap3/css/choice-label.css
+++ b/bootstrap3/css/choice-label.css
@@ -27,11 +27,9 @@
         margin-bottom:1px;
     }
     
-    .choice-label__input {
+    .choice-label .iradio {
         position:absolute;
         left:0;
         bottom:0;
-        height:25px;
-        width:25px;
         margin:0;
     }
