--- a/bootstrap4/css/styles.css
+++ b/bootstrap4/css/styles.css
@@ -438,6 +438,13 @@ body {
 	width:100%;
 	height:100%;
 }
+.popup-imgs-col {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+}
 .popup-imgs-items {
   display: -webkit-box;
   display: -moz-box;
@@ -449,7 +456,8 @@ body {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
-  min-height:100%;
+  -webkit-flex: 1;
+          flex: 1;
 }
 .popup-img-caption {
 	background:rgba(0,0,0,1);
